[tool.poetry]
name = "chengdulocal"
version = "0.1.0"
description = ""
authors = ["mobyw <mobyw66@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.14"
mkdocs-exclude = "^1.0.2"
mkdocs-roamlinks-plugin = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
